--- a/src/modules/Edit/styles.scss
+++ b/src/modules/Edit/styles.scss
@@ -2,6 +2,19 @@
   width: 80%;
   margin: 0 auto;
   font-size: 17px;
+
+  th {
+    padding: 1rem;
+    font-weight: bold;
+    border-bottom: 2px solid #ddd;
+    text-align: left;
+  }
+
+  td {
+    padding: 1rem;
+    border-bottom: 1px solid #ddd;
+    text-align: left;
+  }
 }
 
 .head {
@@ -27,4 +40,36 @@
   border: 2px solid #cdcdcd;
   border-radius: 10px;
   padding: 0.7rem 1rem;
+}
+
+.list-shop {
+  margin-top: 1rem;
+  width: 100%;
+}
+
+#name {
+  padding-right: 10rem;
+}
+
+.total {
+  display: flex;
+  justify-content: space-between;
+  margin: 1rem;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.save {
+  background: none;
+  padding: 0.7rem 1rem;
+  border: 2px solid #cdcdcd;
+  border-radius: 10px;
+}
+
+.in-disc {
+  display: block;
+  margin-top: 0.5rem;
+  border: 1px solid #ddd;
+  border-radius: 0;
+  padding: 5px;
 }
