--- a/src/modules/Edit/styles.scss
+++ b/src/modules/Edit/styles.scss
@@ -73,3 +73,11 @@
   border-radius: 0;
   padding: 5px;
 }
+
+.delete {
+  background: red;
+  padding: 0.7rem 1rem;
+  border: 2px solid #cdcdcd;
+  border-radius: 10px;
+  color: #fff;
+}
