--- a/src/modules/Invoices/styles.scss
+++ b/src/modules/Invoices/styles.scss
@@ -14,6 +14,14 @@
     border-bottom: 1px solid #ddd;
     text-align: left;
   }
+
+  a {
+    text-decoration: none;
+  }
+
+  a:visited {
+    color: #0000ee;
+  }
 }
 
 .invoices {
@@ -40,4 +48,14 @@
   border: 2px solid #cdcdcd;
   border-radius: 10px;
   margin-left: 2rem;
+}
+
+.loader {
+  width: 50px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  top: 50%;
+  transform: translate(0, -50%);
 }
