--- a/src/modules/Edit/styles.scss
+++ b/src/modules/Edit/styles.scss
@@ -82,7 +82,7 @@
   color: #fff;
 }
 
-.addBlock {
+.add-block {
   display: flex;
   align-items: center;
   svg {
@@ -90,7 +90,7 @@
   }
 }
 
-.addBlock .loader {
+.add-block .loader {
   display: flex;
   align-items: center;
   height: 30px;
